# final_project_cpp

./: .gitignore  CMakeLists.txt  README.md  anim.hpp  main.cpp  sfml-app
doc/: plan.md
include/: Menu.hpp  anim.hpp  background.cpp  background.hpp  bullet.hpp  entity.hpp  gameplay.hpp  gamestatus.hpp  player.hpp  target.hpp  view.cpp  view.hpp
lib/level/: TmxLevel.cpp
src/: Menu.cpp  anim.cpp  background.cpp  gameplay.cpp  main.cpp  view.cpp
src/heroes/: 1.xml  Brodell Walker.xml  Bullet.xml  test_player.txt
src/maps/: blocks.tsx  map.tmx  platformer.tmx  test_map.tmj  test_map.tmx
src/maps/files/: Level1.tmx
src/server/: client.cpp  server  server.cpp
